# libirap

./: CMakeLists.txt  README.rst
.github/workflows/: build.yaml
applications/: CMakeLists.txt  cat.cpp
applications/test/: cat-bin.output
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  installation.rst
docs/api/: design.rst  exceptions.rst  parse.rst
include/irap/: exception.hpp
